--- a/Code/Makefile
+++ b/Code/Makefile
@@ -1,5 +1,5 @@
 INCLUDE_DIR=-I../.
 
 
-example: example.cpp
-	g++ -O3  $(INCLUDE_DIR) example.cpp -o example
+main: main.cpp
+	g++ -O3  $(INCLUDE_DIR) main.cpp -o main
